  * Update patches:
    - 0001_fix_symbols_visibility_for_webcore.diff: drop, stolen upstream.
    - 05_sparc_unaligned_access.diff: refresh
    - no_gc_sections.diff: refresh
    - 06_kfreebsd_strnstr.diff, 09_hurd.diff: drop, now strnstr() is properly
      enabled

  [ Pino Toscano ]
  * Add -gstabs to the C(XX)FLAGS also for s390x. (see #637004)

  [ Fathi Boudra ]
  * Update debian/control:
    - bump debhelper build dependency to 8.1.3~.
    - bump Qt build dependency to 4:4.7.4~. This version introduce multiarch.
    - add pkg-config, libgstreamer-plugins-base0.10-dev and
      libgstreamer0.10-dev build dependencies.
    - drop libphonon-dev build and qt-mobility build dependencies.
      (Closes: #634388) GStreamer will be used as the multimedia backend as
      recommended by upstream.
  * Update debian/*.install files for multiarch.
  * Add debian/README.source: explain how to create a new upstream tarball.
  * Update debian/rules:
    - drop ENABLE_GEOLOCATION as qt-mobility build dependency is removed.
    - add WTF_USE_GSTREAMER to enable GStreamer as the multimedia backend.
    - pass --sourcedirectory=Source to dh as the upstream tarball format has
      changed.
    - add override_dh_auto_clean to remove Source/Makefile file and avoid
      dh_clean failure.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Mon, 19 Sep 2011 16:32:18 +0300

qtwebkit (2.1.0~2011week13-2) unstable; urgency=low

  * Add defines_qt_webkit.diff to display correctly documentation in Qt Creator
    Help plugin. (Closes: #619443)
  * Bump Standards-Version to 3.9.2 (no changes needed).

 -- Fathi Boudra <fabo@debian.org>  Sun, 19 Jun 2011 12:35:00 +0300

qtwebkit (2.1.0~2011week13-1) unstable; urgency=low

  * New upstream release.

  [ José Manuel Santamaría Lema ]
  * Add linux_amd64_no_overcommit.diff to avoid crashes on amd64 with less than
    3 or 4GB of RAM. Thanks to Felix Geyer for his help with this issue.

  [ Fathi Boudra ]